Add quarterly response
