# pkg/asset/api/handler.go
@@ -20,6 +20,7 @@ type Service interface {
 	InsertAsset(asset asset_domain.Asset) (bool, error)
 	UpdateAsset(asset asset_domain.Asset) (asset_domain.Asset, error)
 	InsertAssetQuarterlyResult(aqResult asset_domain.AssetQuarterlyResult) (bool, error)
+	GetAssetQuarterlyResults(assetId int64) ([]asset_domain.AssetQuarterlyResult, error)
 }
 
 func NewHandler(service Service) Handler {
@@ -105,11 +106,11 @@ func (h Handler) GetById(c *gin.Context) {
 // Insert Asset Quartely Result godoc
 // @Summary Insere Resultado Trimestral Ativo
 // @Produce json
-// @Param user body asset_api.QuaterlyResultPostRequest true "User-Data"
-// @Param asset-id path int true "Asset ID"
+// @Param user body asset_api.QuarterlyResultPostRequest true "User-Data"
+// @Param id path int true "Asset ID"
 // @Success 201
 // @Router /assets/:asset-id/quarterly-results [post]
-func (h Handler) InsertQuartelyResultAsset(c *gin.Context) {
+func (h Handler) InsertQuarterlyResultAsset(c *gin.Context) {
 	qrAsset := QuarterlyResultPostRequest{}
 	c.BindJSON(&qrAsset)
 	_, err := h.Service.InsertAssetQuarterlyResult(convertPostQuarterlyRequestToDomain(qrAsset))
@@ -118,4 +119,25 @@ func (h Handler) InsertQuartelyResultAsset(c *gin.Context) {
 		return
 	}
 	c.JSON(http.StatusCreated, nil)
+}
+
+// Get Asset Quartely Results godoc
+// @Summary Retorna a lista de resultados de ativos ativos
+// @Produce json
+// @Success 200 {object} []asset_api.QuarterlyResultResponse
+// @Router /assets/:asset-id/quarterly-results [get]
+func (h Handler) GetQuarterlyResultAsset(c *gin.Context) {
+	idParam := c.Param("id")
+	id, err := strconv.ParseInt(idParam, 10, 64)
+	if err != nil {
+		c.AbortWithError(http.StatusBadRequest, err)
+		return
+	}
+	quarterlyResults, err := h.Service.GetAssetQuarterlyResults(id)
+	if err != nil {
+		c.AbortWithError(http.StatusInternalServerError, err)
+		return
+	}
+	c.JSON(http.StatusOK, convertQuarterlyResultsToDtos(quarterlyResults))
+
 }
